backend/compiscript/generated/CompiscriptParser.cpp

// Generated from Compiscript.g4 by ANTLR 4.13.2


#include "CompiscriptVisitor.h"

#include "CompiscriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CompiscriptParserStaticData final {
  CompiscriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CompiscriptParserStaticData(const CompiscriptParserStaticData&) = delete;
  CompiscriptParserStaticData(CompiscriptParserStaticData&&) = delete;
  CompiscriptParserStaticData& operator=(const CompiscriptParserStaticData&) = delete;
  CompiscriptParserStaticData& operator=(CompiscriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag compiscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CompiscriptParserStaticData> compiscriptParserStaticData = nullptr;

void compiscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (compiscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(compiscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CompiscriptParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "block", "controlBody", "variableDeclaration", 
      "constantDeclaration", "typeAnnotation", "initializer", "assignmentStatement", 
      "expressionStatement", "printStatement", "ifStatement", "whileStatement", 
      "doWhileStatement", "forStatement", "foreachStatement", "breakStatement", 
      "continueStatement", "returnStatement", "tryCatchStatement", "switchStatement", 
      "switchCase", "defaultCase", "functionDeclaration", "parameters", 
      "parameter", "classDeclaration", "classMember", "expression", "assignmentExpr", 
      "conditionalExpr", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
      "relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
      "primaryExpr", "literalExpr", "leftHandSide", "primaryAtom", "suffixOp", 
      "arguments", "arrayLiteral", "type", "baseType"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'let'", "'var'", "';'", "'const'", "'='", "':'", 
      "'print'", "'('", "')'", "'if'", "'else'", "'while'", "'do'", "'for'", 
      "'foreach'", "'in'", "'break'", "'continue'", "'return'", "'try'", 
      "'catch'", "'switch'", "'case'", "'default'", "'function'", "','", 
      "'class'", "'\\u003F'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'null'", 
      "'true'", "'false'", "'new'", "'this'", "'['", "']'", "'.'", "'boolean'", 
      "'integer'", "'float'", "'string'", "'void'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "FloatLiteral", "IntegerLiteral", "StringLiteral", 
      "Identifier", "WS", "COMMENT", "MULTILINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  compiscriptParserStaticData = std::move(staticData);
}

}

CompiscriptParser::CompiscriptParser(TokenStream *input) : CompiscriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CompiscriptParser::CompiscriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CompiscriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *compiscriptParserStaticData->atn, compiscriptParserStaticData->decisionToDFA, compiscriptParserStaticData->sharedContextCache, options);
}

CompiscriptParser::~CompiscriptParser() {
  delete _interpreter;
}

const atn::ATN& CompiscriptParser::getATN() const {
  return *compiscriptParserStaticData->atn;
}

std::string CompiscriptParser::getGrammarFileName() const {
  return "Compiscript.g4";
}

const std::vector<std::string>& CompiscriptParser::getRuleNames() const {
  return compiscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& CompiscriptParser::getVocabulary() const {
  return compiscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CompiscriptParser::getSerializedATN() const {
  return compiscriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CompiscriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CompiscriptParser::ProgramContext::EOF() {
  return getToken(CompiscriptParser::EOF, 0);
}

std::vector<CompiscriptParser::StatementContext *> CompiscriptParser::ProgramContext::statement() {
  return getRuleContexts<CompiscriptParser::StatementContext>();
}

CompiscriptParser::StatementContext* CompiscriptParser::ProgramContext::statement(size_t i) {
  return getRuleContext<CompiscriptParser::StatementContext>(i);
}


size_t CompiscriptParser::ProgramContext::getRuleIndex() const {
  return CompiscriptParser::RuleProgram;
}


std::any CompiscriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::ProgramContext* CompiscriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CompiscriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4325690950110926426) != 0)) {
      setState(94);
      statement();
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(100);
    match(CompiscriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CompiscriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::VariableDeclarationContext* CompiscriptParser::StatementContext::variableDeclaration() {
  return getRuleContext<CompiscriptParser::VariableDeclarationContext>(0);
}

CompiscriptParser::ConstantDeclarationContext* CompiscriptParser::StatementContext::constantDeclaration() {
  return getRuleContext<CompiscriptParser::ConstantDeclarationContext>(0);
}

CompiscriptParser::AssignmentStatementContext* CompiscriptParser::StatementContext::assignmentStatement() {
  return getRuleContext<CompiscriptParser::AssignmentStatementContext>(0);
}

CompiscriptParser::FunctionDeclarationContext* CompiscriptParser::StatementContext::functionDeclaration() {
  return getRuleContext<CompiscriptParser::FunctionDeclarationContext>(0);
}

CompiscriptParser::ClassDeclarationContext* CompiscriptParser::StatementContext::classDeclaration() {
  return getRuleContext<CompiscriptParser::ClassDeclarationContext>(0);
}

CompiscriptParser::ExpressionStatementContext* CompiscriptParser::StatementContext::expressionStatement() {
  return getRuleContext<CompiscriptParser::ExpressionStatementContext>(0);
}

CompiscriptParser::PrintStatementContext* CompiscriptParser::StatementContext::printStatement() {
  return getRuleContext<CompiscriptParser::PrintStatementContext>(0);
}

CompiscriptParser::BlockContext* CompiscriptParser::StatementContext::block() {
  return getRuleContext<CompiscriptParser::BlockContext>(0);
}

CompiscriptParser::IfStatementContext* CompiscriptParser::StatementContext::ifStatement() {
  return getRuleContext<CompiscriptParser::IfStatementContext>(0);
}

CompiscriptParser::WhileStatementContext* CompiscriptParser::StatementContext::whileStatement() {
  return getRuleContext<CompiscriptParser::WhileStatementContext>(0);
}

CompiscriptParser::DoWhileStatementContext* CompiscriptParser::StatementContext::doWhileStatement() {
  return getRuleContext<CompiscriptParser::DoWhileStatementContext>(0);
}

CompiscriptParser::ForStatementContext* CompiscriptParser::StatementContext::forStatement() {
  return getRuleContext<CompiscriptParser::ForStatementContext>(0);
}

CompiscriptParser::ForeachStatementContext* CompiscriptParser::StatementContext::foreachStatement() {
  return getRuleContext<CompiscriptParser::ForeachStatementContext>(0);
}

CompiscriptParser::TryCatchStatementContext* CompiscriptParser::StatementContext::tryCatchStatement() {
  return getRuleContext<CompiscriptParser::TryCatchStatementContext>(0);
}

CompiscriptParser::SwitchStatementContext* CompiscriptParser::StatementContext::switchStatement() {
  return getRuleContext<CompiscriptParser::SwitchStatementContext>(0);
}

CompiscriptParser::BreakStatementContext* CompiscriptParser::StatementContext::breakStatement() {
  return getRuleContext<CompiscriptParser::BreakStatementContext>(0);
}

CompiscriptParser::ContinueStatementContext* CompiscriptParser::StatementContext::continueStatement() {
  return getRuleContext<CompiscriptParser::ContinueStatementContext>(0);
}

CompiscriptParser::ReturnStatementContext* CompiscriptParser::StatementContext::returnStatement() {
  return getRuleContext<CompiscriptParser::ReturnStatementContext>(0);
}


size_t CompiscriptParser::StatementContext::getRuleIndex() const {
  return CompiscriptParser::RuleStatement;
}


std::any CompiscriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::StatementContext* CompiscriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CompiscriptParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(102);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(103);
      constantDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(104);
      assignmentStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(105);
      functionDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(106);
      classDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(107);
      expressionStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(108);
      printStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(109);
      block();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(110);
      ifStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(111);
      whileStatement();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(112);
      doWhileStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(113);
      forStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(114);
      foreachStatement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(115);
      tryCatchStatement();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(116);
      switchStatement();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(117);
      breakStatement();
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(118);
      continueStatement();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(119);
      returnStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CompiscriptParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CompiscriptParser::StatementContext *> CompiscriptParser::BlockContext::statement() {
  return getRuleContexts<CompiscriptParser::StatementContext>();
}

CompiscriptParser::StatementContext* CompiscriptParser::BlockContext::statement(size_t i) {
  return getRuleContext<CompiscriptParser::StatementContext>(i);
}


size_t CompiscriptParser::BlockContext::getRuleIndex() const {
  return CompiscriptParser::RuleBlock;
}


std::any CompiscriptParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::BlockContext* CompiscriptParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, CompiscriptParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(CompiscriptParser::T__0);
    setState(126);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4325690950110926426) != 0)) {
      setState(123);
      statement();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(129);
    match(CompiscriptParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlBodyContext ------------------------------------------------------------------

CompiscriptParser::ControlBodyContext::ControlBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::BlockContext* CompiscriptParser::ControlBodyContext::block() {
  return getRuleContext<CompiscriptParser::BlockContext>(0);
}

CompiscriptParser::StatementContext* CompiscriptParser::ControlBodyContext::statement() {
  return getRuleContext<CompiscriptParser::StatementContext>(0);
}


size_t CompiscriptParser::ControlBodyContext::getRuleIndex() const {
  return CompiscriptParser::RuleControlBody;
}


std::any CompiscriptParser::ControlBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitControlBody(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::ControlBodyContext* CompiscriptParser::controlBody() {
  ControlBodyContext *_localctx = _tracker.createInstance<ControlBodyContext>(_ctx, getState());
  enterRule(_localctx, 6, CompiscriptParser::RuleControlBody);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(133);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(131);
      block();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(132);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

CompiscriptParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CompiscriptParser::VariableDeclarationContext::Identifier() {
  return getToken(CompiscriptParser::Identifier, 0);
}

CompiscriptParser::TypeAnnotationContext* CompiscriptParser::VariableDeclarationContext::typeAnnotation() {
  return getRuleContext<CompiscriptParser::TypeAnnotationContext>(0);
}

CompiscriptParser::InitializerContext* CompiscriptParser::VariableDeclarationContext::initializer() {
  return getRuleContext<CompiscriptParser::InitializerContext>(0);
}


size_t CompiscriptParser::VariableDeclarationContext::getRuleIndex() const {
  return CompiscriptParser::RuleVariableDeclaration;
}


std::any CompiscriptParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::VariableDeclarationContext* CompiscriptParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, CompiscriptParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _la = _input->LA(1);
    if (!(_la == CompiscriptParser::T__2

    || _la == CompiscriptParser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(136);
    match(CompiscriptParser::Identifier);
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CompiscriptParser::T__7) {
      setState(137);
      typeAnnotation();
    }
    setState(141);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CompiscriptParser::T__6) {
      setState(140);
      initializer();
    }
    setState(143);
    match(CompiscriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDeclarationContext ------------------------------------------------------------------

CompiscriptParser::ConstantDeclarationContext::ConstantDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CompiscriptParser::ConstantDeclarationContext::Identifier() {
  return getToken(CompiscriptParser::Identifier, 0);
}

CompiscriptParser::ExpressionContext* CompiscriptParser::ConstantDeclarationContext::expression() {
  return getRuleContext<CompiscriptParser::ExpressionContext>(0);
}

CompiscriptParser::TypeAnnotationContext* CompiscriptParser::ConstantDeclarationContext::typeAnnotation() {
  return getRuleContext<CompiscriptParser::TypeAnnotationContext>(0);
}


size_t CompiscriptParser::ConstantDeclarationContext::getRuleIndex() const {
  return CompiscriptParser::RuleConstantDeclaration;
}


std::any CompiscriptParser::ConstantDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitConstantDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::ConstantDeclarationContext* CompiscriptParser::constantDeclaration() {
  ConstantDeclarationContext *_localctx = _tracker.createInstance<ConstantDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, CompiscriptParser::RuleConstantDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(CompiscriptParser::T__5);
    setState(146);
    match(CompiscriptParser::Identifier);
    setState(148);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CompiscriptParser::T__7) {
      setState(147);
      typeAnnotation();
    }
    setState(150);
    match(CompiscriptParser::T__6);
    setState(151);
    expression();
    setState(152);
    match(CompiscriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeAnnotationContext ------------------------------------------------------------------

CompiscriptParser::TypeAnnotationContext::TypeAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::TypeContext* CompiscriptParser::TypeAnnotationContext::type() {
  return getRuleContext<CompiscriptParser::TypeContext>(0);
}


size_t CompiscriptParser::TypeAnnotationContext::getRuleIndex() const {
  return CompiscriptParser::RuleTypeAnnotation;
}


std::any CompiscriptParser::TypeAnnotationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitTypeAnnotation(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::TypeAnnotationContext* CompiscriptParser::typeAnnotation() {
  TypeAnnotationContext *_localctx = _tracker.createInstance<TypeAnnotationContext>(_ctx, getState());
  enterRule(_localctx, 12, CompiscriptParser::RuleTypeAnnotation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    match(CompiscriptParser::T__7);
    setState(155);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitializerContext ------------------------------------------------------------------

CompiscriptParser::InitializerContext::InitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::ExpressionContext* CompiscriptParser::InitializerContext::expression() {
  return getRuleContext<CompiscriptParser::ExpressionContext>(0);
}


size_t CompiscriptParser::InitializerContext::getRuleIndex() const {
  return CompiscriptParser::RuleInitializer;
}


std::any CompiscriptParser::InitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitInitializer(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::InitializerContext* CompiscriptParser::initializer() {
  InitializerContext *_localctx = _tracker.createInstance<InitializerContext>(_ctx, getState());
  enterRule(_localctx, 14, CompiscriptParser::RuleInitializer);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    match(CompiscriptParser::T__6);
    setState(158);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStatementContext ------------------------------------------------------------------

CompiscriptParser::AssignmentStatementContext::AssignmentStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::LeftHandSideContext* CompiscriptParser::AssignmentStatementContext::leftHandSide() {
  return getRuleContext<CompiscriptParser::LeftHandSideContext>(0);
}

CompiscriptParser::ExpressionContext* CompiscriptParser::AssignmentStatementContext::expression() {
  return getRuleContext<CompiscriptParser::ExpressionContext>(0);
}


size_t CompiscriptParser::AssignmentStatementContext::getRuleIndex() const {
  return CompiscriptParser::RuleAssignmentStatement;
}


std::any CompiscriptParser::AssignmentStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitAssignmentStatement(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::AssignmentStatementContext* CompiscriptParser::assignmentStatement() {
  AssignmentStatementContext *_localctx = _tracker.createInstance<AssignmentStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, CompiscriptParser::RuleAssignmentStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    leftHandSide();
    setState(161);
    match(CompiscriptParser::T__6);
    setState(162);
    expression();
    setState(163);
    match(CompiscriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

CompiscriptParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CompiscriptParser::ExpressionContext* CompiscriptParser::ExpressionStatementContext::expression() {
  return getRuleContext<CompiscriptParser::ExpressionContext>(0);
}


size_t CompiscriptParser::ExpressionStatementContext::getRuleIndex() const {
  return CompiscriptParser::RuleExpressionStatement;
}


std::any CompiscriptParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CompiscriptVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

CompiscriptParser::ExpressionStatementContext* CompiscriptParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, CompiscriptParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(165);
    expression();
    setState(166);
    match(CompiscriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStatementContext ------------------------------------------------------------------
